# my-project

./: .bazelrc  .eslint.rc  .gitignore  .watchmanconfig  AGENTS.md  AndroidAppManifest.xml.tpl  BUILD.bazel  README.md  WORKSPACE  my_project_proguard.pro  package.json
.github/workflows/: android-build.yml
modules/my-project/: BUILD.bazel
modules/my_project/: BUILD.bazel
modules/my_project/src/: App.tsx
